--- a/index.html
+++ b/index.html
@@ -11,37 +11,51 @@
 <body>
   <div id="code-playground" class="output-hidden">
     <div id="side-menu">
-      <div id="run-button" onclick="runCode()"><i class="material-icons">play_arrow</i></div>
-      <div id="stop-button" onclick="stopCode()"><i class="material-icons">stop</i></div>
-      <div id="save-button" onclick="saveAsFile()"><i class="material-icons">file_download</i></div>
-      <div id="info-button"><a href="https://blog.patricktriest.com" target="_blank" rel="noopener"><i class="material-icons">info</i></a></div>
-      <div id="hide-button" onclick="toggleOutputVisibility()">
-        <i class="material-icons hide-icon">visibility</i>
-        <i class="material-icons show-icon hidden">visibility_off</i>
+      <div class="menu-items">
+        <div id="run-button" onclick="runCode()"><i class="material-icons">play_arrow</i></div>
+        <div id="stop-button" onclick="stopCode()"><i class="material-icons">stop</i></div>
+        <div id="save-button" onclick="saveAsFile()"><i class="material-icons">file_download</i></div>
+        <div id="info-button"><a href="https://blog.patricktriest.com" target="_blank" rel="noopener"><i class="material-icons">info</i></a></div>
+        <div id="hide-button" onclick="toggleOutputVisibility()">
+          <i class="material-icons hide-icon">visibility</i>
+          <i class="material-icons show-icon hidden">visibility_off</i>
+        </div>
       </div>
     </div>
     <div id="code-panel">
       <div id="editor"></div>
       <div id="select-editor">
+        <h1>Javascript Playground</h1>
         <h2>Select Code Editor</h2>
-        <div id="select-monaco">
-          <h3>Monaco</h3>
-          <p>The editor that powers <strong>Visual Studio Code</strong>.</p>
-          <p>Larger (1.4mb)</p>
-          <p>Advanced Feature Set</p>
-          <input type="button" value="Use Monaco" onclick="setupMonacoEditor()">
+        <div class="editor-selection" id="select-monaco" onclick="setupMonacoEditor()">
+          <h1>Monaco</h1>
+          <div class="editor-details">
+            <h1>Monaco</h1>
+            <ul>
+              <li>The editor that powers <strong>Visual Studio Code</strong>.</li>
+              <li>The most advanced open-source browser-based editor.</li>
+              <li>Recomended for advanced experiments.</li>
+              <li>Large (1.4mb)</li>
+            </ul>
+          </div>
         </div>
-        <div id="select-monaco">
-          <h3>Ace</h3>
-          <p>Used by Cloud9, Khan Academy, Plunker, and more.</p>
-          <p>Lightweight (120kb), Mobile Friendly</p>
-          <p>Basic Feature Set</p>
-          <input type="button" value="Use Ace" onclick="setupAceEditor()">
+        <div class="editor-selection" id="select-ace" onclick="setupAceEditor()">
+          <h1>Ace</h1>
+          <div class="editor-details">
+            <h1>Ace</h1>
+            <ul>
+              <li>Used by <strong>Cloud9, Khan Academy, Plunker</strong>, and more.</li>
+              <li>Strong feature set, including syntax highlighting and code folding.</li>
+              <li>Recomended for basic experiments.</li>
+              <li>Lightweight-ish (120kb)</li>
+            </ul>
+          </div>
         </div>
       </div>
+      <div class="editor-helper-text">shift+enter to run code.</div>
     </div>
     <div id="info-panel">
-      <h2>Console Output</h2>
+      <h2 class="console-output-label">Console Output</h2>
       <div id="log-list"></div>
     </div>
   </div>
