Update "info" href to gh repo

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
         <div id="run-button" onclick="runCode()"><i class="material-icons">play_arrow</i></div>
         <div id="stop-button" onclick="stopCode()"><i class="material-icons">stop</i></div>
         <div id="save-button" onclick="saveAsFile()"><i class="material-icons">file_download</i></div>
-        <div id="info-button"><a href="https://blog.patricktriest.com" target="_blank" rel="noopener"><i class="material-icons">info</i></a></div>
+        <div id="info-button"><a href="https://github.com/triestpa/OpenJS-Sandbox" target="_blank" rel="noopener"><i class="material-icons">info</i></a></div>
         <div id="hide-button" onclick="toggleOutputVisibility()">
           <i class="material-icons hide-icon">visibility</i>
           <i class="material-icons show-icon hidden">visibility_off</i>
