Add PWA app manifest json file

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8">
   <title>Open JS Sandbox</title>
   <meta name="description" content="An offline-first Javascript playground.  Powered by the VSCode editor, this is the easiest way to quickly develop and test vanila Javascript code experiments."/>
-  <link rel="icon" href="favicon.png">
+  <link rel="manifest" href="manifest.json">
+  <link rel="icon" href="/icons/logo-w64.png">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
